deployments/gitea/route-gitea.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitea
  namespace: gitea
  annotations:
    #Only needed for Setup gitea behind a proxy
    haproxy.router.openshift.io/timeout: "10m"
spec:
  to:
    kind: Service
    name: gitea
  port:
    targetPort: http
  tls:
    termination: edge
